--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
+:root{
+    --blanco: #FFFFFF;
+    --oscuro: #212121;
+    --primario: #FFC107;
+    --secundario: #0097A7;
+    --gris: #757575;
+}
+
 html{
     font-size: 65.5%;
 }
 body{
     font-size: 16px; /* 1 rem = 10px*/
 }
-h1{
+.titulo{
     text-align:center;
     font-size: 3.8rem;
+    color: var(--primario);
 }
-
-span{
+.titulo span{
     font-size: 2rem;
 }
