--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,38 @@ html{
 }
 body{
     font-size: 16px; /* 1 rem = 10px*/
+    font-family: 'Krub', sans-serif;
 }
 .titulo{
     text-align:center;
-    font-size: 3.8rem;
-    color: var(--primario);
+    font-size: 3.8rem;  
 }
 .titulo span{
     font-size: 2rem;
+}
+
+.contenedor{
+    width: 120rem;
+    margin: 0 auto;
+}
+.nav-bg{
+    background-color: var(--secundario);
+}
+.navegacion-principal{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+ }
+ 
+.navegacion-principal a{
+    color: var(--blanco);
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 1rem;
+}
+
+.navegacion-principal a:hover{
+    background-color: var(--primario);
+    color: var(--oscuro);
 }
